# devdesk

./: .antigravityrules  .clauderules  .gitignore  CLAUDE.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  tenancy.py
backend/app/core/: config.py  context.py  errors.py  events.py  htmlmeta.py  policy.py  security.py
backend/app/db/: mongo.py  postgres.py
backend/app/models/: activity.py  audit_log.py  bookmark.py  collection.py  comment.py  notification.py  outbox.py  project.py  saved_filter.py  snippet.py  tag.py  task.py  template.py  user.py  workflow_state.py  workspace.py
backend/app/platform/: search.py  worker.py
backend/app/repositories/: activity_repo.py  audit_repo.py  bookmark_repo.py  collection_repo.py  comment_repo.py  notification_repo.py  project_repo.py  saved_filter_repo.py  snippet_repo.py  tag_repo.py  task_repo.py  template_repo.py  user_repo.py  workflow_state_repo.py  workspace_repo.py
backend/app/routers/: admin.py  auth.py  bookmarks.py  collections.py  comments.py  notifications.py  projects.py  saved_filters.py  search.py  snippets.py  tags.py  tasks.py  templates.py  users.py  workflow_states.py  workspaces.py
backend/app/schemas/: auth.py  bookmark.py  comment.py  notification.py  organization.py  project.py  search.py  snippet.py  task.py  template.py  workflow_state.py  workspace.py
backend/app/services/: auth_service.py  bookmark_service.py  (+12 more)
backend/migrations/: env.py
backend/tests/: conftest.py
(+138 files in other folders)
