[project]
name = "devdesk-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pymongo>=4.13",
    "httpx>=0.27",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "testcontainers[postgres,mongodb]>=4.5",
    "aiosqlite>=0.20",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
